--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     const doneMessage = document.getElementById('doneMessage');
 
     yesBtn.addEventListener('click', () => {
-      const phone = '919876543210';
-      const msg = encodeURIComponent("❤️ I love you to the moon and back! ❤️");
+      const phone = '919058739473';
+      const msg = encodeURIComponent("❤️ I love you So Much! ❤️");
       window.open(`https://wa.me/${phone}?text=${msg}`, '_blank');
       promptBox.style.display = 'none';
       doneMessage.style.display = 'block';
